--- a/chatbot/templates/chatbot/chat.html
+++ b/chatbot/templates/chatbot/chat.html
@@ -48,7 +48,7 @@
                     if(data.response_meta.source=='tool_agent'){
                         $('.metadata').html('<p>Response Type: '+data.response_meta.response_type+'</p><p>source: '+data.response_meta.source+'</p><p>Tool Used: '+data.response_meta.tool_used+'</p>');
                     }else{
-                        $('.metadata').html('<p>Response Type: '+data.response_meta.response_type+'</p><p>source: '+data.response_meta.source+'</p><p>Source Documents: '+data.response_meta.source_documents+'</p>');
+                        $('.metadata').html('<p>Response Type: '+data.response_meta.response_type+'</p><p>source: '+data.response_meta.source+'</p>');
                     }
 
                     
