--- a/chatbot/templates/chatbot.html
+++ b/chatbot/templates/chatbot.html
@@ -45,11 +45,7 @@
                     
                     
                                        
-                    if(data.response_meta.source=='tool_agent'){
-                        $('.metadata').html('<p>Response Type: '+data.response_meta.response_type+'</p><p>source: '+data.response_meta.source+'</p><p>Tool Used: '+data.response_meta.tool_used+'</p><p>Message ID: '+data.message_id+'</p><p>Session ID: '+data.session_id+'</p>');
-                    }else{
-                        $('.metadata').html('<p>Response Type: '+data.response_meta.response_type+'</p><p>source: '+data.response_meta.source+'</p><p>Message ID: '+data.message_id+'</p><p>Session ID: '+data.session_id+'</p>');
-                    }
+                    $('.metadata').html('<p>Response Type: '+data.response_meta.response_type+'</p><p>Source: '+data.response_meta.source+'</p><p>Total Tokens: '+data.response_meta.total_tokens+'</p><p>Input Tokens: '+data.response_meta.input_tokens+'</p><p>Output Tokens: '+data.response_meta.output_tokens+'</p>');
 
                     
 
